향상된 switch문 사용